submit java-spring-boot-ru/jpa-comparing-entities